# memfs

./: .gitignore  LICENSE  MANIFEST.in  changelog.md  examples.py  history.md  project.md  project_rules.md  pyproject.toml  readme.md  readme_cn.md  requirements.txt
memfs/: __init__.py
memfs/api/: __init__.py  native.py  object.py
memfs/async_worker/: __init__.py  worker.py
memfs/cache/: __init__.py  lfu.py  priority.py  tracker.py
memfs/config/: __init__.py
memfs/core/: __init__.py  directory.py  file.py  filesystem.py  instance_manager.py
memfs/storage/: __init__.py  disk.py  hybrid.py  lock_manager.py  memory.py  real_path.py
memfs/utils/: __init__.py  compress.py  logger.py  stats.py
tests/: test_core.py  test_hybrid_storage.py  test_memory_eviction.py  test_multi_instance.py  test_real_path.py
